# otter

./: .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  repository.yaml  result
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  Dockerfile  config.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: config.rs  errors.rs  lib.rs  main.rs  middleware.rs
backend/crates/api/src/handlers/: categories.rs  entries.rs  mod.rs  months.rs  summary.rs  transactions.rs
backend/crates/api/src/requests/: mod.rs
backend/crates/api/src/responses/: mod.rs
backend/crates/api/tests/: api_tests.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 001_initial.sql  002_add_category_label.sql  003_add_transaction_title.sql
backend/crates/db/src/: lib.rs
backend/crates/db/src/repos/: category_repo.rs  entry_repo.rs  mod.rs  month_repo.rs  transaction_repo.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/entities/: budget_entry.rs  category.rs  mod.rs  month.rs  transaction.rs
backend/crates/domain/src/errors/: mod.rs
backend/crates/domain/src/ports/: category_repo.rs  entry_repo.rs  mod.rs  month_repo.rs  transaction_repo.rs
backend/crates/domain/src/services/: category_service.rs  entry_service.rs  mod.rs  month_service.rs  summary_service.rs  transaction_service.rs
backend/crates/domain/src/types/: budget_month.rs  category_name.rs  due_day.rs  mod.rs  money.rs  transaction_date.rs
deploy/nginx/: nginx.conf
docs/: IMPLEMENTATION_SPEC.md  STYLE_GUIDE.md  VERIFICATION_REPORT.md
docs/frontend/: BUDGET_PROGRESS_BARS_INTEGRATION.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  constants.ts  main.ts
frontend/src/api/: categories.ts  client.ts  entries.ts  months.ts  summary.ts  transactions.ts  types.ts
frontend/src/components/budget/: BudgetCategoryPanel.vue  BudgetProgressBars.vue  PanelActionRow.vue  PanelTransactionList.vue
frontend/src/components/categories/: CategoryDrawer.vue
frontend/src/components/charts/: BudgetVsActualChart.vue  PaymentProgressDonut.vue
frontend/src/components/entries/: CategoryAutocomplete.vue  EntryDrawer.vue  EntryForm.vue  EntryList.vue
frontend/src/components/layout/: BottomNav.vue  LanguageSwitcher.vue  MonthNavigationBar.vue  MonthTabs.vue  SettingsDrawer.vue
frontend/src/components/transactions/: TransactionDrawer.vue  TransactionForm.vue  TransactionList.vue
frontend/src/composables/: useCategoryTransactions.ts  useMonths.ts  useUiPreferences.ts
frontend/src/i18n/: en.json  index.ts  pl.json
frontend/src/router/: index.ts
frontend/src/theme/: vuetify.ts
frontend/src/utils/: category.ts  currency.ts
frontend/src/views/: CategoryListView.vue  MonthBudgetView.vue  MonthListView.vue  MonthTransactionsView.vue
nix/: flake.nix
otter/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml
otter/rootfs/etc/s6-overlay/s6-rc.d/otter/: run
otter/translations/: en.yaml  pl.yaml
tasks/1.0-budget-bar-expand/: PLAN.md  SPEC.md  STATUS.md
tasks/2.0-transaction-title/: PLAN.md  STATUS.md
