[package]
name = "otter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "otter"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
utoipa = { version = "5", features = ["axum_extras"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "fs", "request-id", "trace", "util"] }
tower = { version = "0.5", features = ["util"] }
config = { version = "0.14", features = ["toml", "json"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
uuid = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
