[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
tracing = "0.1"
