[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"
